--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <h1>Olá mundo git</h1>
+    <h1>Olá mundo git e do github</h1>
     <script src="js/index.js"></script>
 </body>
 </html>
